
INCLUDE_DIRECTORIES (
  ../engine
  ${TCL_INCLUDE}
)

SET (TCL_SOURCES
    TclCommands.cc
    TclSymdiffCommands.cc
    tclcomp.cc
)

ADD_LIBRARY (symdiff_tcl SHARED ${TCL_SOURCES})
TARGET_LINK_LIBRARIES (symdiff_tcl symdiff ${TCL_LIBRARIES} ${TCL_STUB_LIBRARY})
SET_TARGET_PROPERTIES(symdiff_tcl PROPERTIES OUTPUT_NAME "symdifftcl")


#GET_TARGET_PROPERTY(SYMDIFF_TCL_NAME symdiff_tcl LOCATION)
ADD_CUSTOM_COMMAND(TARGET symdiff_tcl
          POST_BUILD
          COMMAND ${TCL_TCLSH} ${CMAKE_SOURCE_DIR}/scripts/mkindex.tcl
	  COMMENT "running TCL mkindex script"
)

set(TCL_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/tcl/symdiff0.0/)

install(TARGETS symdiff_tcl LIBRARY DESTINATION ${TCL_INSTALL_DIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/pkgIndex.tcl DESTINATION ${TCL_INSTALL_DIR})


#IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
#SET_TARGET_PROPERTIES(symdiff_tcl PROPERTIES INSTALL_RPATH "\$ORIGIN/")
#ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
#IF (APPLE)
#SET_TARGET_PROPERTIES(symdiff_tcl PROPERTIES INSTALL_RPATH "@loader_path/")
#ENDIF (APPLE)


